@@ -1,3 +1,9 @@
+2001-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-add-text-properties): Don't specify `end-open' nor
+	`front-nonsticky' that are the default.
+	(w3m-emacs-w3m-icon): Colorized.
+
 2001-05-22  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-cache-contents): Don't insert additional '\n' for
